[package]
name = "epl"
description = "A Litecord compatible/inspired OSS implementation of Discord's backend for fun and profit."
keywords = ["discord", "litecord"]

homepage = "https://gitlab.com/uwueviee/epl"
repository = "https://gitlab.com/uwueviee/epl"

authors = ["Evie Viau <evie@eviee.gay>"]

license = "Apache-2.0"

version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.11.0" # Async
async-tungstenite = "0.17.2" # Gateway
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" } # HTTP
diesel = { version = "2.0.0-rc.0", features = ["postgres"] } # Database

chrono = "0.4.19"
parking_lot = "0.12.0"

pretty_env_logger = "0.4.0"