[package]
name = "epl"
description = "A Litecord compatible/inspired OSS implementation of Discord's backend for fun and profit."
keywords = ["discord", "litecord"]

homepage = "https://gitlab.com/uwueviee/epl"
repository = "https://gitlab.com/uwueviee/epl"

authors = ["Evie Viau <evie@eviee.gay>"]

license = "Apache-2.0"

version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.1", features = ["rt"] } # Async

warp = "0.3.2" # Gateway

rocket = { git = "https://github.com/SergioBenitez/Rocket.git", features = ["json"] } # HTTP
rocket_dyn_templates = { git = "https://github.com/SergioBenitez/Rocket.git", features = ["handlebars"]}
rocket_sync_db_pools = { git = "https://github.com/SergioBenitez/Rocket.git", features = ["diesel_postgres_pool"] }

diesel = { version = "2.0.0-rc.0", features = ["postgres", "r2d2", "uuid"] } # Database
bb8 = "0.8.0"
async-bb8-diesel = { git = "https://github.com/oxidecomputer/async-bb8-diesel.git" }

chrono = "0.4.19"

log = "0.4.17"
pretty_env_logger = "0.4.0"

serde = { version = "1.0.137", features = ["derive"] }
serde_derive = { version = "1.0.137" }
serde_json = "1.0.81"
serde_repr = "0.1.8"
serde_with = "1.13.0"

jsonwebtoken = "8.1.0"
uuid = "1.0.0"