[package]
name = "epl-cdn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## Core
tokio = { version = "^1.26", features = ["full"] }
tokio-util = "0.7.10"
epl-common = { path = "../epl-common" }

## Web
axum = { version = "^0.6", features = ["ws", "query"] }
tower-http = { version = "*", features = ["cors"] }

## Database
sea-orm = { version = "^0.11", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "0.11.1"
migration = { path = "../migration" }

## Data
serde = { version = "1.0.156", features = ["derive"] }
serde_derive = { version = "1.0.156" }
serde_json = "1.0.94"

chrono = "0.4.24"

## AWS
aws-config = { version = "1.1.8", features = ["behavior-version-latest"]}
aws-sdk-s3 = "1.19.1"

## Misc
tracing = "0.1.37"
tracing-subscriber = "0.3.16"