[package]
name = "epl-cdn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## Core
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.10"
epl-common = { path = "../epl-common" }

## Web
axum = { version = "0.7.5", features = ["ws", "query"] }
tower-http = { version = "0.5.2", features = ["cors"] }

## Database
sea-orm = { version = "1.0.0-rc.3", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.0.0-rc.3"
migration = { path = "../migration" }

## Data
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = { version = "1.0.197" }
serde_json = "1.0.115"

chrono = "0.4.37"

## AWS
aws-config = { version = "1.1.9", features = ["behavior-version-latest"]}
aws-sdk-s3 = "1.21.0"

## Misc
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

ril = { version = "0.10.1", features = ["webp", "gif", "png", "jpeg", "resize"] }

magic = "0.16.2"
mp4 = "0.14.0"
