[package]
name = "epl-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## Database
sea-orm = { version = "^0.11", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "0.11.1"
migration = { path = "../migration" }

## Auth
rand = { version = "0.8.5", features = ["std_rng"] }

jsonwebtoken = "8.3.0"

blake3 = "1.3.3"
argon2 = "0.5.0"
zxcvbn = "2.2.1"

## Data
serde = { version = "1.0.156", features = ["derive"] }
serde_derive = { version = "1.0.156" }
serde_json = "1.0.94"
serde_repr = "0.1.11"
serde_with = "2.3.1"

chrono = "0.4.24"

maxminddb = "0.23.0"

## NATS Wire Protocol
rmp-serde = "1.1.1"

## Misc
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

once_cell = "1.17.1"

enum-iterator = "1.4.1"

num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
