[package]
name = "epl-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## Database
sea-orm = { version = "1.0.0-rc.3", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.0.0-rc.3"
migration = { path = "../migration" }

## Auth
rand = { version = "0.8.5", features = ["std_rng"] }

jsonwebtoken = "9.3.0"

blake3 = "1.5.1"
argon2 = "0.5.0"
zxcvbn = "2.2.2"

## Data
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = { version = "1.0.197" }
serde_json = "1.0.115"
serde_repr = "0.1.18"
serde_with = "3.7.0"

chrono = "0.4.37"

maxminddb = "0.24.0"

## NATS Wire Protocol
async-nats = "0.34.0"

# Protobuf
prost = "0.12.3"
bytes = "1.6.0"

## Misc
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

once_cell = "1.19.0"

enum-iterator = "2.0.0"

num = "0.4.1"
num-derive = "0.4.2"
num-traits = "0.2.18"

regex = "1.10.4"

ureq = { version = "2.9.6", features = ["json"] }

base64 = "0.22.0"

[build-dependencies]
prost-build = "0.12.3"