[package]
name = "epl-gateway"
description = "Websocket gateway for epl, a Litecord compatible/inspired OSS implementation of Discord's backend for fun and profit."
keywords = ["discord", "litecord"]

homepage = "https://git.gaycatgirl.sex/litecord/epl"
repository = "https://git.gaycatgirl.sex/litecord/epl"

authors = ["Evie Viau <evie@eviee.gay>"]

license = "Apache-2.0"

version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## Core
tokio = { version = "^1.26", features = ["full"] }
epl-common = { path = "../epl-common" }

## Web
axum = { version = "^0.6", features = ["ws", "query"] }
tower-http = { version = "*", features = ["cors"] }

axum-client-ip = "0.4.1"

## Gateway
state = { version = "^0.5", features = ["tls"] }

futures = "0.3.27"

serde_eetf = "0.2.0"
flate2 = "1.0.26"

## Database
sea-orm = { version = "^0.11", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "0.11.1"
migration = { path = "../migration" }

## Auth
rand = { version = "0.8.5", features = ["std_rng"] }

jsonwebtoken = "8.3.0"

blake3 = "1.3.3"
argon2 = "0.5.0"
zxcvbn = "2.2.1"

## Data
serde = { version = "1.0.156", features = ["derive"] }
serde_derive = { version = "1.0.156" }
serde_json = "1.0.94"
serde_repr = "0.1.11"
serde_with = "2.3.1"

chrono = "0.4.24"

## NATS Wire Protocol
rmp-serde = "1.1.1"

## Misc
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

async-nats = "0.29.0"
