[package]
name = "epl-http"
description = "HTTP API for epl, a Litecord compatible/inspired OSS implementation of Discord's backend for fun and profit."
keywords = ["discord", "litecord"]

homepage = "https://git.gaycatgirl.sex/epl/epl-http"
repository = "https://git.gaycatgirl.sex/epl/epl-http"

authors = ["Evie Viau <evie@eviee.gay>"]

license = "Apache-2.0"

version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## Core
tokio = { version = "^1.36", features = ["full"] }
epl-common = { path = "../epl-common" }

## Web
axum = { version = "^0.7", features = ["ws"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }

askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"

## Database
sea-orm = { version = "1.0.0-rc.3", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.0.0-rc.3"
migration = { path = "../migration" }

## Auth
rand = { version = "0.8.5", features = ["std_rng"] }

jsonwebtoken = "9.3.0"

blake3 = "1.5.1"
argon2 = "0.5.0"
zxcvbn = "2.2.2"

## Data
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = { version = "1.0.197" }
serde_json = "1.0.115"
serde_repr = "0.1.18"
serde_with = "3.7.0"

chrono = "0.4.37"

base64 = "0.22.0"

prost = "0.12.4"

## AWS
aws-config = { version = "1.1.9", features = ["behavior-version-latest"]}
aws-sdk-s3 = "1.21.0"

## NATS Wire Protocol
async-nats = "0.34.0"

## Misc
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

ril = { version = "0.10.1", features = ["webp", "gif", "png", "jpeg", "resize"] }

sha256 = "1.5.0"

url = "2.5.0"

http-body-util = "0.1.1"

unic = "0.9.0"