[package]
name = "epl-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## Core
tokio = { version = "^1.36", features = ["full"] }
futures = "0.3.30"
epl-common = { path = "../epl-common" }

## Database
sea-orm = { version = "1.0.0-rc.3", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.0.0-rc.3"
migration = { path = "../migration" }

## Data
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = { version = "1.0.197" }
serde_json = "1.0.115"
serde_repr = "0.1.18"
serde_with = "3.7.0"

chrono = "0.4.37"

## NATS Wire Protocol
async-nats = "0.34.0"

## AWS
aws-config = { version = "1.1.9", features = ["behavior-version-latest"]}
aws-sdk-s3 = "1.21.0"

## HTTP
ureq = { version = "2.9.6", features = ["json"] }
url = "2.5.0"

## Misc
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

